Fri Oct 20 13:01:26 BST 2000 Olly Betts

	* Added `make ctags' rule.

Fri Oct 20 12:55:10 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fixed refcount problem with Quartz - references were being held
	  to the QuartzDatabase member of a QuartzWritableDatabase.
	  Restructured to tidy up and avoid this:  QuartzTermLists now hold
	  a refcount pointer to the appropriate database, and store a
	  pointer to the lexicon table to use directly if required.

Thu Oct 19 16:47:18 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added a few indexer tests.

	* Made the START node's output be a wildcard type.

Thu Oct 19 16:03:01 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* quartz_lexicons allocate new term IDs (untested).

Thu Oct 19 13:00:52 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Implemented quartz_lexicon, except for allocation of new term IDs.
	  Close to working correctly, except for unexplained refcount problem
	  in testsuite.

Thu Oct 19 09:59:15 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added quartz_lexicon.{cc,h}.  Appropriate interface - not yet
	  implemented though.

Thu Oct 19 09:08:50 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* QuartzTermLists now implemented, and roughly tested.  Quartz test
	  currently fails because databases don't yet have get_termfreq()
	  implemented.

Wed Oct 18 16:19:42 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Error handler is now set in constructor of OmEnquire - this means
	  that errors during the constructor can be handled, and also helps
	  to ensure that handler is deleted after OmEnquire.

	* Error handler copes with (most) problems in
	  MergePostList::recalc_maxweight(), and in the event of an error it
	  can cope with, replaces the relevant postlist by an emptypostlist
	  instead of deleting it.

	* Renamed test multidb6 to multierrhandler1.  This test now passes.
