@@ -1,3 +1,8 @@
+Fri Oct 20 13:58:57 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>
+
+	* Fixed checks for document IDs being 0 or termnames being "" in
+	  API.  Changed checks in Quartz for these conditions into Asserts.
+
 Fri Oct 20 13:01:26 BST 2000 Olly Betts
 
 	* Added `make ctags' rule.
